# Dracolich

./: .gitignore  README.md  evolve.sh  package-lock.json  package.json  tsconfig.json
examples/minecraft/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECT_REPORT.md  AUDIO_IMPLEMENTATION.md  BUILD_LOG.md  CHECKLIST.md  CHUNK_QUICKSTART.md  CHUNK_SYSTEM.md  CHUNK_SYSTEM_SUMMARY.md  Cargo.toml  HANDOFF_WORLD_GENERATOR.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  INVENTORY_SYSTEM.md  MOB_INTEGRATION_GUIDE.md  MOB_QUICKSTART.md  MOB_SYSTEM.md  MOB_SYSTEM_SUMMARY.md  MOB_VERIFICATION.md  NEXT_AGENT_TODO.md  PHYSICS_IMPLEMENTATION.md  PHYSICS_SUMMARY.md  PHYSICS_VERIFICATION.md  PLAYER_IMPLEMENTATION.md  PLAYER_INTEGRATION_EXAMPLE.md  PLAYER_SUMMARY.md  PLAYER_VERIFICATION.md  PROJECT_FOUNDATION.md  README.md  RENDERER_API.md  RENDERER_IMPLEMENTATION.md  SWARM.md  TERRAIN_GENERATION.md  TEXTURE_ARTIST_DELIVERY.md  TEXTURE_SYSTEM.md  UI_INTEGRATION.md  UI_QUICK_REFERENCE.md  UI_SUMMARY.md  UI_SYSTEM.md  (+5 more)
examples/minecraft/examples/: audio_usage.rs  test_terrain.rs
examples/minecraft/shaders/: block.frag  block.vert  highlight.frag  highlight.vert  sky.frag  sky.vert  ui.frag  ui.vert
examples/minecraft/src/: config.rs  game.rs  game_loop.rs  input.rs  lib.rs  main.rs  state.rs  types.rs  window.rs
examples/minecraft/src/assets/: generate_atlas.rs
examples/minecraft/src/audio/: mod.rs  music.rs  sounds.rs
examples/minecraft/src/inventory/: crafting.rs  inventory.rs  item.rs  mod.rs  tools.rs
examples/minecraft/src/mobs/: mod.rs  (+6 more)
(+66 files in other folders)
